--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,2 @@
-FLOWDOCK_FLOW_TOKEN=abcdefghijklmnopqrstuvwxyz123456
+FLOWDOCK_FLOW_TOKENS=abcdefghijklmnopqrstuvwxyz123456,abcdefghijklmnopqrstuvwxyz123456,abcdefghijklmnopqrstuvwxyz123456
 ANTELL_MENU_URL=http://www.antell.fi/lounaslistat/lounaslista.html?owner=112
